--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="content"></div>
-    <script src="../vendors.js"></script>
+    <script src="../../_vendors.js"></script>
 </body>
 </html>
